Overflow issues

--- a/scss/misc.scss
+++ b/scss/misc.scss
@@ -62,7 +62,7 @@ body.has-sidebar-page #main-outlet-wrapper, body #main-outlet-wrapper {
     gap: 0 2em;
     #main-outlet {
         max-width: unset;
-        width: 100%;
+        width: 96%;
         padding-right: 2em;
     }
 }
